warning and logging cleanup part 2